--- a/Ayu1/backend/server/Dockerfile
+++ b/Ayu1/backend/server/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /server
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
 RUN pip3 install -U flask-cors
-#RUN python3 -m grpc_tools.protoc -I protobuffs --python_out=. --grpc_python_out=. protobuffs/sales_records.proto
+#RUN python3 -m grpc_tools.protoc -I protobuffs --python_out=. --grpc_python_out=. protobuffs/examples.proto
 ENTRYPOINT ["python3"]
 CMD ["-u","main.py"]
