--- a/Ayu2/docker-compose.yml
+++ b/Ayu2/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "3888:3888"
   kafka:
     image: "bitnami/kafka:latest"
+    container_name: kafka
     restart: always
     ports:
       - "9092:9092"
