almost done app

--- a/Ayu2/docker-compose-db.yml
+++ b/Ayu2/docker-compose-db.yml
@@ -3,6 +3,9 @@ version: '3.4'
 ##############-SERVICES-####################
 services:
 
+#################-example-app-#####################
+
+
 ###################-POSTGRESQL-##########################
   db:
     container_name: db
