adding on compose some configurations for db service on yml

--- a/Ayu2/docker-compose-db.yml
+++ b/Ayu2/docker-compose-db.yml
@@ -4,7 +4,11 @@ version: '3.4'
 services:
 
 #################-example-app-#####################
-
+  example-app:
+    build: ./db-example-app
+    container_name: example-app
+    volumes:
+      - ./db-example-app:/usr/src/app
 
 ###################-POSTGRESQL-##########################
   db:
