--- a/Ayu2/docker-compose-db.yml
+++ b/Ayu2/docker-compose-db.yml
@@ -5,22 +5,21 @@ services:
 
 #################-example-app-#####################
   example-app:
-    build: ./db-example-app
+    build: ./db-app-example
     container_name: example-app
     volumes:
-      - ./db-example-app:/usr/src/app
+      - ./db-app-example:/usr/src/app
 
 ###################-POSTGRESQL-##########################
   db:
     container_name: db
-    image: postgres:15-alpine
+    image: postgres:16.0-alpine3.18
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=proyecto
       - POSTGRES_PASSWORD=postgres
-      - POSTGRESQL_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data/some_name/
     ports:
       - "5433:5432"
