--- a/Ayu2/docker-compose.yml
+++ b/Ayu2/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
+    volumes:
+      - ./commands:/commands
   
   producer:
     build: ./producers
@@ -42,5 +44,26 @@ services:
       - producer
     volumes:
       - ./consumers:/usr/src/app
+  
+  #################-example-app-#####################
+  example-app:
+    build: ./db-app-example
+    container_name: example-app
+    volumes:
+      - ./db-app-example:/usr/src/app
+    
+  ###################-POSTGRESQL-##########################
+  db:
+    container_name: db
+    image: postgres:16.0-alpine3.18
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=proyecto
+      - POSTGRES_PASSWORD=postgres
+      - PGDATA=/var/lib/postgresql/data/some_name/
+    ports:
+      - "5433:5432"
 
     
