--- a/Ayu3/Hadoop/Dockerfile
+++ b/Ayu3/Hadoop/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update -y \
         curl \
         ssh \
         python3 \
+        python3-pip \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
